# qml_clock

./: README.md  demo
AnalogClock/: AnalogClock.qml  Button.qml  CMakeLists.txt  Clock.qml  ClockUI.qml  ColorButtons.qml  DragMinuteHand.qml  HourHand.qml  HourNeedle.qml  Main.qml  MinuteHand.qml  ModeButton.qml  SecondHand.qml  TimeBox.qml  VisibilityButtons.qml  main.cpp
build-AnalogClock-Qt_6_6_2_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  appanalogclock_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-AnalogClock-Qt_6_6_2_for_macOS-Debug/.qt/: QtDeploySupport.cmake
build-AnalogClock-Qt_6_6_2_for_macOS-Debug/.qt/deploy_qml_imports/: appAnalogClock.cmake
build-AnalogClock-Qt_6_6_2_for_macOS-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appAnalogClock.cmake  Qt6_QmlPlugins_Imports_appAnalogClock.rsp
build-AnalogClock-Qt_6_6_2_for_macOS-Debug/.rcc/: appAnalogClock_raw_qml_0.qrc  qmake_AnalogClock.qrc  qrc_appAnalogClock_raw_qml_0.cpp  qrc_qmake_AnalogClock.cpp
build-AnalogClock-Qt_6_6_2_for_macOS-Debug/.rcc/qmlcache/: appAnalogClock_AnalogClock_qml.cpp  appAnalogClock_ButtonMode_qml.cpp  (+7 more)
build-AnalogClock-Qt_6_6_2_for_macOS-Debug/AnalogClock/: ButtonMode.qml  ClockFace.qml  HourHand.qml  MinuteHand.qml  MinuteNeedle.qml  appAnalogClock_qml_module_dir_map.qrc  qmldir
build-AnalogClock-Qt_6_6_2_for_macOS-Debug/appAnalogClock_autogen/: deps  moc_predefs.h
build-AnalogClock-Qt_6_6_2_for_macOS-Debug/qmltypes/: appAnalogClock_foreign_types.txt
fyi-task/: CMakeLists.txt  main.cpp
(+42 files in other folders)
